--- a/Part1/E1.14/Frontend/Dockerfile
+++ b/Part1/E1.14/Frontend/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /usr/src/app
 
 COPY . .
 
-ENV REACT_APP_BACKEND_URL=http://127.0.0.1:8080
+ENV REACT_APP_BACKEND_URL=http://localhost:8080
 
 RUN npm install
 
