--- a/Part1/E1.14/Backend/Dockerfile
+++ b/Part1/E1.14/Backend/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /usr/src/app
 
 COPY . .
 
-ENV REQUEST_ORIGIN=http://127.0.0.1:5000
+ENV REQUEST_ORIGIN=http://localhost:5000
 
 RUN go build
 
